--- a/information/index.html
+++ b/information/index.html
@@ -170,7 +170,7 @@
               시대기물연구소 〈파도〉
               <br />
               <br />
-              In SANSUHWA*TEAHOUSE
+              In Sansuhwa Teahouse
               <br />
 
               21-14, Hannam-daero 20gil,
@@ -328,12 +328,15 @@
                   <p>
                     우리는 과거의 모든 방법으로 차를 마실 수도, 새로운 방법으로
                     차를 마실수도 있습니다. 이번 『1-1 새로운 차의 맛』 전시를
-                    통해 과거의 표현방식에 질문을 하고 답을 찾아가는 과정에서
+                    통해 과거의 표현 방식에 질문을 하고 답을 찾아가는 과정에서
                     작가는 엄격한 자기검열보다 실험성을 담은 새로운 다기를
-                    고민하고 제안합니다. 도구가 달라지면 그 도구를 사용하는
-                    우리의 생각에도 물리적 확장이 일어나며 행위에도 변화가
-                    일어납니다. 새로운 차도구를 통해 새로운 차의 맛이
-                    만들어집니다.
+                    고민하고 제안합니다.
+                  </p>
+
+                  <p>
+                    도구가 달라지면 그 도구를 사용하는 우리의 생각에도 물리적
+                    확장이 일어나며 행위에도 변화가 일어납니다. 새로운 차도구를
+                    통해 새로운 차의 맛이 만들어집니다.
                   </p>
                 </div>
               </div>
@@ -343,7 +346,7 @@
               <div class="cv__item">
                 <p class="cv__item__header">1-1 New flavors of tea</p>
                 <p class="cv__item__header">
-                  Kim Joong-Hoon | Cho Jang-Hyun | Hong Woo-Kyung
+                  Kim Jong-Hun | Cho Jang-Hyun | Hong Woo-Kyung
                 </p>
 
                 <div class="cv__item__text">
@@ -366,9 +369,13 @@
                     exhibition, 『1-1 New flavors of tea』, the artist questions
                     and answers the past ways of expression and proposes a new
                     tea ceremony that embraces experimentation rather than
-                    strict self-censorship. As our tools change, there is a
-                    physical expansion in our thoughts and behaviors as we use
-                    them. New tools create new flavors of tea.
+                    strict self-censorship.
+                  </p>
+
+                  <p>
+                    As our tools change, there is a physical expansion in our
+                    thoughts and behaviors as we use them. New tools create new
+                    flavors of tea.
                   </p>
                 </div>
 
@@ -389,10 +396,7 @@
               <p class="more__item__header">Owner</p>
 
               <div class="more__item__text">
-                <p>
-                  Sansuhwa Teahouse<br />
-                  Jung Hye-Joo
-                </p>
+                <p>Jung Hye-Joo</p>
               </div>
             </div>
 
@@ -408,7 +412,7 @@
             </div> -->
 
             <div class="more__item">
-              <p class="more__item__header">Teahouse</p>
+              <p class="more__item__header">Sansuhwa Teahouse</p>
 
               <div class="more__item__text">
                 <p>
