--- a/newflavorsoftea/1-1-hwk-t/index.html
+++ b/newflavorsoftea/1-1-hwk-t/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, user-scalable=1"
     />
 
-    <title>파도 • 1-1-KJH-P</title>
+    <title>파도 • 1-1-HWK-T</title>
     <meta
       name="description"
       content="시대기물연구소 〈파도〉는 전통의 깊은 토대 위에서 지금 이 시대의 이야기를 담는 기물을 연구하고 제안합니다."
@@ -276,8 +276,8 @@
       <main id="swup" class="transition-fade">
         <div id="project__header" class="page__header">
           <div class="projectnav desktop">
-            <a href="../1-1-cjh-t/">Prev: 1-1-CJH-T</a>
-            <a href="../1-1-cjh-c/">Next: 1-1-CJH-C</a>
+            <a href="../1-1-hwk-p/">Prev: 1-1-HWK-P</a>
+            <a href="../1-1-cjh-t/">Next: 1-1-CJH-T</a>
           </div>
 
           <div class="projectclose mobile">
@@ -285,11 +285,11 @@
           </div>
 
           <div class="projecttitle__wrapper">
-            <div class="projecttitle__number">1-1-KJH-P</div>
+            <div class="projecttitle__number">1-1-HWK-T</div>
 
             <div class="projecttitle__name">
               <a href="#">
-                <p>김종훈 Kim Jong-Hun</p>
+                <p>홍우경 Hong Woo-Kyung</p>
               </a>
             </div>
           </div>
@@ -342,7 +342,7 @@
               <div class="slideshow__counter">
                 <div class="counter__wrapper">
                   <div class="counter__item counter--current">
-                    <!-- <span class="counter__projectnumber">1-1-03-CJH</span>
+                    <!-- <span class="counter__projectnumber">1-1-HWK-C</span>
                     &nbsp;&nbsp; -->
 
                     <span class="counter__current hidden"></span>
@@ -396,7 +396,7 @@
                   </span>
 
                   <span>
-                    <p>Kim Jong-Hun</p>
+                    <p>Hong Woo-Kyung</p>
                   </span>
                 </div>
 
@@ -424,7 +424,7 @@
                     <p>Usage</p>
                   </span>
                   <span>
-                    <p>For brewing and filtering tea leaves</p>
+                    <p>For various purposes in the tea ceremony</p>
                   </span>
                 </div>
 
