--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -170,7 +170,7 @@
               시대기물연구소 〈파도〉
               <br />
               <br />
-              In SANSUHWA*TEAHOUSE
+              In Sansuhwa Teahouse
               <br />
 
               21-14, Hannam-daero 20gil,
