--- a/newflavorsoftea/1-1-cjh-c/index.html
+++ b/newflavorsoftea/1-1-cjh-c/index.html
@@ -220,6 +220,13 @@
               </span>
             </a>
 
+            <a href="../1-1-hwk-t/" class="projectlist__item">
+              <span class="item--projectnumber">02</span>
+              <span class="item--projectname">
+                <p>1-1-hwk-T</p>
+              </span>
+            </a>
+
             <a href="../1-1-kjh-c/" class="projectlist__item">
               <span class="item--projectnumber">01</span>
               <span class="item--projectname">
@@ -276,8 +283,8 @@
       <main id="swup" class="transition-fade">
         <div id="project__header" class="page__header">
           <div class="projectnav desktop">
-            <a href="../1-1-kjh-t">Prev: 1-1-KJH-T</a>
-            <a href="../1-1-cjh-p">Next: 1-1-CJH-P</a>
+            <a href="../1-1-cjh-p">Prev: 1-1-CJH-P</a>
+            <a href="../1-1-kjh-t">Next: 1-1-KJH-T</a>
           </div>
 
           <div class="projectclose mobile">
@@ -288,7 +295,7 @@
             <div class="projecttitle__number">1-1-CJH-C</div>
 
             <div class="projecttitle__name">
-              <a href="#">
+              <a href="../../">
                 <p>조장현 Cho Jang-Hyun</p>
               </a>
             </div>
@@ -496,8 +503,8 @@
               <div class="slideshow__counter">
                 <div class="counter__wrapper">
                   <div class="counter__item counter--current">
-                    <!-- <span class="counter__projectnumber">1-1-CJH-C</span>
-                    &nbsp;&nbsp; -->
+                    <span class="counter__projectnumber">1-1-CJH-T</span>
+                    &nbsp;&nbsp;
 
                     <span class="counter__current hidden"></span>
                   </div>
