--- a/newflavorsoftea/1-1-cjh-p/index.html
+++ b/newflavorsoftea/1-1-cjh-p/index.html
@@ -193,7 +193,7 @@
               </span>
             </a>
 
-            <a href="../1-1-cjh-p/" class="projectlist__item">
+            <a href="../1-1-cjh-p/" class="projectlist__item active">
               <span class="item--projectnumber">03</span>
               <span class="item--projectname">
                 <p>1-1-cjh-P</p>
@@ -213,10 +213,17 @@
                 <p>1-1-hwk-C</p>
               </span>
             </a>
-            <a href="../1-1-hwk-p/" class="projectlist__item">
+             <a href="../1-1-hwk-p/" class="projectlist__item">
               <span class="item--projectnumber">02</span>
               <span class="item--projectname">
                 <p>1-1-hwk-P</p>
+              </span>
+            </a>
+
+            <a href="../1-1-hwk-t/" class="projectlist__item">
+              <span class="item--projectnumber">02</span>
+              <span class="item--projectname">
+                <p>1-1-hwk-T</p>
               </span>
             </a>
 
@@ -285,10 +292,10 @@
           </div>
 
           <div class="projecttitle__wrapper">
-            <div class="projecttitle__number">1-1-03-CJH</div>
+            <div class="projecttitle__number">1-1-CJH-P</div>
 
             <div class="projecttitle__name">
-              <a href="#">
+              <a href="../../">
                 <p>조장현 Cho Jang-Hyun</p>
               </a>
             </div>
@@ -1344,8 +1351,8 @@
               <div class="slideshow__counter">
                 <div class="counter__wrapper">
                   <div class="counter__item counter--current">
-                    <!-- <span class="counter__projectnumber">1-1-03-CJH</span>
-                    &nbsp;&nbsp; -->
+                    <span class="counter__projectnumber">1-1-CJH-P</span>
+                    &nbsp;&nbsp;
 
                     <span class="counter__current hidden"></span>
                   </div>
