--- a/newflavorsoftea/1-1-cjh-t/index.html
+++ b/newflavorsoftea/1-1-cjh-t/index.html
@@ -200,7 +200,7 @@
               </span>
             </a>
 
-            <a href="../1-1-cjh-t/" class="projectlist__item">
+            <a href="../1-1-cjh-t/" class="projectlist__item active">
               <span class="item--projectnumber">03</span>
               <span class="item--projectname">
                 <p>1-1-cjh-T</p>
@@ -213,10 +213,17 @@
                 <p>1-1-hwk-C</p>
               </span>
             </a>
-            <a href="../1-1-hwk-p/" class="projectlist__item">
+             <a href="../1-1-hwk-p/" class="projectlist__item">
               <span class="item--projectnumber">02</span>
               <span class="item--projectname">
                 <p>1-1-hwk-P</p>
+              </span>
+            </a>
+
+            <a href="../1-1-hwk-t/" class="projectlist__item">
+              <span class="item--projectnumber">02</span>
+              <span class="item--projectname">
+                <p>1-1-hwk-T</p>
               </span>
             </a>
 
@@ -276,7 +283,7 @@
       <main id="swup" class="transition-fade">
         <div id="project__header" class="page__header">
           <div class="projectnav desktop">
-            <a href="../1-1-hwk-C/">Prev: 1-1-HWK-C</a>
+            <a href="../1-1-hwk-c/">Prev: 1-1-HWK-C</a>
             <a href="../1-1-cjh-p/">Next: 1-1-CJH-P</a>
           </div>
 
@@ -288,7 +295,7 @@
             <div class="projecttitle__number">1-1-CJH-T</div>
 
             <div class="projecttitle__name">
-              <a href="#">
+              <a href="../../">
                 <p>조장현 Cho Jang-Hyun</p>
               </a>
             </div>
@@ -410,8 +417,8 @@
               <div class="slideshow__counter">
                 <div class="counter__wrapper">
                   <div class="counter__item counter--current">
-                    <!-- <span class="counter__projectnumber">1-1-03-CJH</span>
-                    &nbsp;&nbsp; -->
+                    <span class="counter__projectnumber">1-1-CJH-T</span>
+                    &nbsp;&nbsp;
 
                     <span class="counter__current hidden"></span>
                   </div>
