--- a/newflavorsoftea/1-1-hwk-c/index.html
+++ b/newflavorsoftea/1-1-hwk-c/index.html
@@ -207,16 +207,23 @@
               </span>
             </a>
 
-            <a href="../1-1-hwk-c/" class="projectlist__item">
+            <a href="../1-1-hwk-c/" class="projectlist__item active">
               <span class="item--projectnumber">02</span>
               <span class="item--projectname">
                 <p>1-1-hwk-C</p>
               </span>
             </a>
-            <a href="../1-1-hwk-p/" class="projectlist__item">
+             <a href="../1-1-hwk-p/" class="projectlist__item">
               <span class="item--projectnumber">02</span>
               <span class="item--projectname">
                 <p>1-1-hwk-P</p>
+              </span>
+            </a>
+
+            <a href="../1-1-hwk-t/" class="projectlist__item">
+              <span class="item--projectnumber">02</span>
+              <span class="item--projectname">
+                <p>1-1-hwk-T</p>
               </span>
             </a>
 
@@ -288,7 +295,7 @@
             <div class="projecttitle__number">1-1-HWK-C</div>
 
             <div class="projecttitle__name">
-              <a href="#">
+              <a href="../../">
                 <p>홍우경 Hong Woo-Kyung</p>
               </a>
             </div>
@@ -382,8 +389,8 @@
               <div class="slideshow__counter">
                 <div class="counter__wrapper">
                   <div class="counter__item counter--current">
-                    <!-- <span class="counter__projectnumber">1-1-HWK-C</span>
-                    &nbsp;&nbsp; -->
+                    <span class="counter__projectnumber">1-1-HWK-C</span>
+                    &nbsp;&nbsp;
 
                     <span class="counter__current hidden"></span>
                   </div>
