--- a/index.html
+++ b/index.html
@@ -296,13 +296,13 @@
               class="mapping__sort__button mapping__sort--random sort--active"
               data-sort="random"
             >
-              Mix
+              → Shuffle
             </div>
             <div
               class="mapping__sort__button mapping__sort--chronological sort--inactive"
               data-sort="default"
             >
-              In Order
+              → In Order
             </div>
           </div>
         </div>
