--- a/index.html
+++ b/index.html
@@ -296,13 +296,13 @@
               class="mapping__sort__button mapping__sort--random sort--active"
               data-sort="random"
             >
-              → Shuffle
+              Shuffle
             </div>
             <div
               class="mapping__sort__button mapping__sort--chronological sort--inactive"
               data-sort="default"
             >
-              → In Order
+              In Order
             </div>
           </div>
         </div>
@@ -1308,7 +1308,7 @@
                   <span class="item__count">
                     <span class="item__projectnumber">1-1-cjh-T</span>
                     &nbsp;
-                    <span class="item__imgnumber">2</span>
+                    <span class="item__imgnumber">3</span>
                   </span>
 
                   <span class="item__projectname hidden"
@@ -1436,7 +1436,7 @@
                   <span class="item__count">
                     <span class="item__projectnumber">1-1-hwk-P</span>
                     &nbsp;
-                    <span class="item__imgnumber">2</span>
+                    <span class="item__imgnumber">6</span>
                   </span>
 
                   <span class="item__projectname hidden"
@@ -1478,7 +1478,7 @@
                   <span class="item__count">
                     <span class="item__projectnumber">1-1-hwk-P</span>
                     &nbsp;
-                    <span class="item__imgnumber">3</span>
+                    <span class="item__imgnumber">9</span>
                   </span>
 
                   <span class="item__projectname hidden"
@@ -1546,7 +1546,7 @@
                     rel="noopener noreferrer"
                   >
                     <img
-                      src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-t001_1.jpg?tr=w-200"
+                      src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-t002_1.jpg?tr=w-200"
                       srcset=""
                       data-srcset=""
                       data-sizes="auto"
@@ -1561,7 +1561,7 @@
                   <span class="item__count">
                     <span class="item__projectnumber">1-1-hwk-T</span>
                     &nbsp;
-                    <span class="item__imgnumber">2</span>
+                    <span class="item__imgnumber">3</span>
                   </span>
 
                   <span class="item__projectname hidden"
@@ -1730,7 +1730,7 @@
                   <span class="item__count">
                     <span class="item__projectnumber">1-1-kjh-P</span>
                     &nbsp;
-                    <span class="item__imgnumber">2</span>
+                    <span class="item__imgnumber">4</span>
                   </span>
 
                   <span class="item__projectname hidden"
@@ -1772,7 +1772,7 @@
                   <span class="item__count">
                     <span class="item__projectnumber">1-1-kjh-P</span>
                     &nbsp;
-                    <span class="item__imgnumber">3</span>
+                    <span class="item__imgnumber">9</span>
                   </span>
 
                   <span class="item__projectname hidden"
@@ -1814,7 +1814,7 @@
                   <span class="item__count">
                     <span class="item__projectnumber">1-1-kjh-P</span>
                     &nbsp;
-                    <span class="item__imgnumber">4</span>
+                    <span class="item__imgnumber">13</span>
                   </span>
 
                   <span class="item__projectname hidden"
@@ -1856,7 +1856,7 @@
                   <span class="item__count">
                     <span class="item__projectnumber">1-1-kjh-P</span>
                     &nbsp;
-                    <span class="item__imgnumber">5</span>
+                    <span class="item__imgnumber">18</span>
                   </span>
 
                   <span class="item__projectname hidden"
@@ -1940,7 +1940,7 @@
                   <span class="item__count">
                     <span class="item__projectnumber">1-1-kjh-T</span>
                     &nbsp;
-                    <span class="item__imgnumber">2</span>
+                    <span class="item__imgnumber">4</span>
                   </span>
 
                   <span class="item__projectname hidden"
@@ -2190,7 +2190,7 @@
                   <span class="item__count">
                     <span class="item__projectnumber">1-1-kjh-T</span>
                     &nbsp;
-                    <span class="item__imgnumber">6</span>
+                    <span class="item__imgnumber">28</span>
                   </span>
 
                   <span class="item__projectname hidden"
