--- a/newflavorsoftea/1-1-cjh-c/index.html
+++ b/newflavorsoftea/1-1-cjh-c/index.html
@@ -343,7 +343,7 @@
                     order="1"
                     width="1500"
                     height="2000"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -362,7 +362,7 @@
                     order="2"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -381,7 +381,7 @@
                     order="3"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -400,7 +400,7 @@
                     order="4"
                     width="1500"
                     height="2000"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -419,7 +419,7 @@
                     order="5"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -438,7 +438,7 @@
                     order="6"
                     width="1500"
                     height="2000"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -457,7 +457,7 @@
                     order="7"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -476,7 +476,7 @@
                     order="8"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -495,7 +495,7 @@
                     order="9"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
               </div>
@@ -623,7 +623,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="1"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -643,7 +643,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="2"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -663,7 +663,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="3"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -683,7 +683,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="4"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -703,7 +703,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="5"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -723,7 +723,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="6"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -743,7 +743,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="7"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -763,7 +763,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="8"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -783,7 +783,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="9"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -801,7 +801,7 @@
 
         <div class="tooltip"></div>
         <div class="zoomnotice">
-          <p>Move a Finger Over the Image to Zoom.</p>
+          <p>Move a finger over the image to zoom.</p>
         </div>
       </main>
     </div>
