--- a/newflavorsoftea/1-1-cjh-t/index.html
+++ b/newflavorsoftea/1-1-cjh-t/index.html
@@ -341,7 +341,7 @@
                     order="1"
                     width="1500"
                     height="2000"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -358,7 +358,7 @@
                     order="2"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -375,7 +375,7 @@
                     order="3"
                     width="1500"
                     height="2000"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -392,7 +392,7 @@
                     order="4"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -409,7 +409,7 @@
                     order="5"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
               </div>
@@ -537,7 +537,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="1"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -556,7 +556,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="2"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -575,7 +575,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="3"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -594,7 +594,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="4"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -613,7 +613,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="5"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -631,7 +631,7 @@
 
         <div class="tooltip"></div>
         <div class="zoomnotice">
-          <p>Move a Finger Over the Image to Zoom.</p>
+          <p>Move a finger over the image to zoom.</p>
         </div>
       </main>
     </div>
