--- a/newflavorsoftea/1-1-hwk-p/index.html
+++ b/newflavorsoftea/1-1-hwk-p/index.html
@@ -341,7 +341,7 @@
                     order="1"
                     width="1500"
                     height="2000"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -358,7 +358,7 @@
                     order="2"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -375,7 +375,7 @@
                     order="3"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -392,7 +392,7 @@
                     order="4"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -409,7 +409,7 @@
                     order="5"
                     width="1500"
                     height="2000"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -426,7 +426,7 @@
                     order="6"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -443,7 +443,7 @@
                     order="7"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -460,7 +460,7 @@
                     order="8"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -477,7 +477,7 @@
                     order="9"
                     width="1500"
                     height="2000"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -494,7 +494,7 @@
                     order="10"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -511,7 +511,7 @@
                     order="11"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -528,7 +528,7 @@
                     order="12"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
               </div>
@@ -656,7 +656,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="1"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -675,7 +675,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="2"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -694,7 +694,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="3"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -713,7 +713,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="4"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -732,7 +732,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="5"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -751,7 +751,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="6"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -770,7 +770,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="7"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -789,7 +789,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="8"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -808,7 +808,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="9"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -827,7 +827,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="10"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -846,7 +846,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="11"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -865,7 +865,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="12"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -883,7 +883,7 @@
 
         <div class="tooltip"></div>
         <div class="zoomnotice">
-          <p>Move a Finger Over the Image to Zoom.</p>
+          <p>Move a finger over the image to zoom.</p>
         </div>
       </main>
     </div>
