--- a/newflavorsoftea/1-1-kjh-c/index.html
+++ b/newflavorsoftea/1-1-kjh-c/index.html
@@ -343,7 +343,7 @@
                     order="1"
                     width="1500"
                     height="2000"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -362,7 +362,7 @@
                     order="2"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -381,7 +381,7 @@
                     order="3"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -400,7 +400,7 @@
                     order="4"
                     width="1500"
                     height="2000"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -419,7 +419,7 @@
                     order="5"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -438,7 +438,7 @@
                     order="6"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -457,7 +457,7 @@
                     order="7"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
               </div>
@@ -585,7 +585,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="1"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -604,7 +604,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="2"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -623,7 +623,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="3"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -642,7 +642,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="4"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -661,7 +661,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="5"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -680,7 +680,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="6"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -699,7 +699,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="7"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -717,7 +717,7 @@
 
         <div class="tooltip"></div>
         <div class="zoomnotice">
-          <p>Move a Finger Over the Image to Zoom.</p>
+          <p>Move a finger over the image to zoom.</p>
         </div>
       </main>
     </div>
