--- a/newflavorsoftea/1-1-kjh-p/index.html
+++ b/newflavorsoftea/1-1-kjh-p/index.html
@@ -343,7 +343,7 @@
                     order="1"
                     width="1500"
                     height="2000"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -362,7 +362,7 @@
                     order="2"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -381,7 +381,7 @@
                     order="3"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -400,7 +400,7 @@
                     order="4"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -419,7 +419,7 @@
                     order="5"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -438,7 +438,7 @@
                     order="6"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -457,7 +457,7 @@
                     order="7"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -476,7 +476,7 @@
                     order="8"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -495,7 +495,7 @@
                     order="9"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -514,7 +514,7 @@
                     order="10"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -533,7 +533,7 @@
                     order="11"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -552,7 +552,7 @@
                     order="12"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -571,7 +571,7 @@
                     order="13"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -590,7 +590,7 @@
                     order="14"
                     width="1500"
                     height="2000"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -609,7 +609,7 @@
                     order="15"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -628,7 +628,7 @@
                     order="16"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -647,7 +647,7 @@
                     order="17"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -666,7 +666,7 @@
                     order="18"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -685,7 +685,7 @@
                     order="19"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -704,7 +704,7 @@
                     order="20"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -723,7 +723,7 @@
                     order="21"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -742,7 +742,7 @@
                     order="22"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -761,7 +761,7 @@
                     order="23"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
               </div>
@@ -889,7 +889,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="1"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -908,7 +908,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="2"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -927,7 +927,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="3"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -946,7 +946,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="4"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -965,7 +965,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="5"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -984,7 +984,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="6"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1003,7 +1003,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="7"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1022,7 +1022,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="8"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1041,7 +1041,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="9"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1060,7 +1060,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="10"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1079,7 +1079,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="11"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1098,7 +1098,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="12"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1117,7 +1117,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="13"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1136,7 +1136,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="14"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1155,7 +1155,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="15"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1174,7 +1174,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="16"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1193,7 +1193,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="17"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1212,7 +1212,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="18"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1231,7 +1231,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="19"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1250,7 +1250,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="20"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1269,7 +1269,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="21"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1288,7 +1288,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="22"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1307,7 +1307,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="23"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1325,7 +1325,7 @@
 
         <div class="tooltip"></div>
         <div class="zoomnotice">
-          <p>Move a Finger Over the Image to Zoom.</p>
+          <p>Move a finger over the image to zoom.</p>
         </div>
       </main>
     </div>
