--- a/newflavorsoftea/1-1-kjh-t/index.html
+++ b/newflavorsoftea/1-1-kjh-t/index.html
@@ -343,7 +343,7 @@
                     order="1"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -362,7 +362,7 @@
                     order="2"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -381,7 +381,7 @@
                     order="3"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -400,7 +400,7 @@
                     order="4"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -419,7 +419,7 @@
                     order="5"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -438,7 +438,7 @@
                     order="6"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -457,7 +457,7 @@
                     order="7"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -476,7 +476,7 @@
                     order="8"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -495,7 +495,7 @@
                     order="9"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -514,7 +514,7 @@
                     order="10"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -533,7 +533,7 @@
                     order="11"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -552,7 +552,7 @@
                     order="12"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -571,7 +571,7 @@
                     order="13"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -590,7 +590,7 @@
                     order="14"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -609,7 +609,7 @@
                     order="15"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -628,7 +628,7 @@
                     order="16"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -647,7 +647,7 @@
                     order="17"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -666,7 +666,7 @@
                     order="18"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -685,7 +685,7 @@
                     order="19"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -704,7 +704,7 @@
                     order="20"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -723,7 +723,7 @@
                     order="21"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -742,7 +742,7 @@
                     order="22"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -761,7 +761,7 @@
                     order="23"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -780,7 +780,7 @@
                     order="24"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -799,7 +799,7 @@
                     order="25"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -818,7 +818,7 @@
                     order="26"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -837,7 +837,7 @@
                     order="27"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -854,7 +854,7 @@
                     order="28"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -871,7 +871,7 @@
                     order="29"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -888,7 +888,7 @@
                     order="30"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
                 <div
@@ -905,7 +905,7 @@
                     order="31"
                     width="2000"
                     height="1500"
-                    alt=""
+                    alt="Reload to view the image."
                   />
                 </div>
               </div>
@@ -1033,7 +1033,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="1"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1052,7 +1052,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="2"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1071,7 +1071,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="3"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1090,7 +1090,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="4"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1109,7 +1109,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="5"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1128,7 +1128,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="6"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1147,7 +1147,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="7"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1166,7 +1166,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="8"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1185,7 +1185,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="9"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1204,7 +1204,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="10"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1223,7 +1223,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="11"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1242,7 +1242,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="12"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1261,7 +1261,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="13"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1280,7 +1280,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="14"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1299,7 +1299,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="15"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1318,7 +1318,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="16"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1337,7 +1337,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="17"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1356,7 +1356,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="18"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1375,7 +1375,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="19"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1394,7 +1394,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="20"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1413,7 +1413,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="21"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1432,7 +1432,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="22"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1451,7 +1451,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="23"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1470,7 +1470,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="24"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1489,7 +1489,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="25"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1508,7 +1508,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="26"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1527,7 +1527,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="27"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1546,7 +1546,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="28"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1565,7 +1565,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="29"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1584,7 +1584,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="30"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1603,7 +1603,7 @@
                       data-sizes="auto"
                       class="lazyload item__img"
                       data-count="31"
-                      alt=""
+                      alt="Reload to view the image."
                     />
                   </div>
 
@@ -1621,7 +1621,7 @@
 
         <div class="tooltip"></div>
         <div class="zoomnotice">
-          <p>Move a Finger Over the Image to Zoom.</p>
+          <p>Move a finger over the image to zoom.</p>
         </div>
       </main>
     </div>
