--- a/index.html
+++ b/index.html
@@ -248,15 +248,15 @@
             </a>
           </div>
 
-          <!-- <div class="header__menutoggle__lang language__item visible de">
+          <div class="header__menutoggle__lang language__item visible ko">
             <span class="language--active">
-              <a href="#" hreflang="ko"> KO </a>
+              <a href="#" hreflang="ko"> </a>
             </span>
 
             <span>
-              <a href="#" hreflang="en"> EN </a>
+              <a href="#" hreflang="en"></a>
             </span>
-          </div> -->
+          </div>
 
           <div class="menu__item pages">
             <div class="pages__item">
@@ -1056,7 +1056,7 @@
                   <span class="item__count">
                     <span class="item__projectnumber">1-1-cjh-P</span>
                     &nbsp;
-                    <span class="item__imgnumber">15</span>
+                    <span class="item__imgnumber">43</span>
                   </span>
 
                   <span class="item__projectname hidden"
