--- a/information/index.html
+++ b/information/index.html
@@ -240,15 +240,15 @@
             </a>
           </div>
 
-          <!-- <div class="header__menutoggle__lang language__item visible de">
+          <div class="header__menutoggle__lang language__item visible ko">
             <span class="language--active">
-              <a href="./" hreflang="ko"> KO </a>
+              <a href="#" hreflang="ko"> </a>
             </span>
 
             <span>
-              <a href="../en" hreflang="en"> EN </a>
+              <a href="#" hreflang="en"></a>
             </span>
-          </div> -->
+          </div>
 
           <div class="menu__item pages">
             <div class="pages__item">
