--- a/index.html
+++ b/index.html
@@ -151,16 +151,20 @@
     <link href="./assets/css/slick.css" rel="stylesheet" />
     <link href="./assets/css/style.css" rel="stylesheet" />
 
-
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-K8YHW7GRXK"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-K8YHW7GRXK"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'G-K8YHW7GRXK');
-</script>
+      gtag("config", "G-K8YHW7GRXK");
+    </script>
   </head>
 
   <body class="home">
@@ -1248,6 +1252,48 @@
 
           <div
             class="mix mapping__item"
+            data-project="8"
+            data-link="./newflavorsoftea/1-1-cjh-p/"
+            data-dominantcolor-hex="#ffffff"
+          >
+            <div class="item__wrapper">
+              <div class="item__img__wrapper">
+                <div class="item__link__wrapper">
+                  <a
+                    href="./newflavorsoftea/1-1-cjh-p/"
+                    class="mapping__item__link disabled"
+                    target="_self"
+                    rel="noopener noreferrer"
+                  >
+                    <img
+                      src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-cjh-p020_1.jpg?tr=w-200"
+                      srcset=""
+                      data-srcset=""
+                      data-sizes="auto"
+                      class="lazyload item__img"
+                      width="2000"
+                      alt=""
+                    />
+                  </a>
+                </div>
+
+                <div class="item__text hidden">
+                  <span class="item__count">
+                    <span class="item__projectnumber">1-1-cjh-P</span>
+                    &nbsp;
+                    <span class="item__imgnumber">52</span>
+                  </span>
+
+                  <span class="item__projectname hidden"
+                    >조장현 Cho Jang-Hyun</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="mix mapping__item"
             data-project="7"
             data-link="./newflavorsoftea/1-1-cjh-t/"
             data-dominantcolor-hex="#fafafa"
@@ -1583,6 +1629,48 @@
             </div>
           </div>
 
+          <div
+            class="mix mapping__item"
+            data-project="4"
+            data-link="./newflavorsoftea/1-1-hwk-t/"
+            data-dominantcolor-hex="#ffffff"
+          >
+            <div class="item__wrapper">
+              <div class="item__img__wrapper">
+                <div class="item__link__wrapper">
+                  <a
+                    href="./newflavorsoftea/1-1-hwk-t/"
+                    class="mapping__item__link disabled"
+                    target="_self"
+                    rel="noopener noreferrer"
+                  >
+                    <img
+                      src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-t003_1.jpg?tr=w-200"
+                      srcset=""
+                      data-srcset=""
+                      data-sizes="auto"
+                      class="lazyload item__img"
+                      width="2000"
+                      alt=""
+                    />
+                  </a>
+                </div>
+
+                <div class="item__text hidden">
+                  <span class="item__count">
+                    <span class="item__projectnumber">1-1-hwk-T</span>
+                    &nbsp;
+                    <span class="item__imgnumber">5</span>
+                  </span>
+
+                  <span class="item__projectname hidden"
+                    >홍우경 Hong Woo-Kyung</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+
           <!-- newflavorsoftea/1-1-kjh -->
           <div
             class="mix mapping__item"
@@ -1658,6 +1746,88 @@
                     <span class="item__projectnumber">1-1-kjh-C</span>
                     &nbsp;
                     <span class="item__imgnumber">4</span>
+                  </span>
+
+                  <span class="item__projectname hidden"
+                    >김종훈 Kim Jong-Hun</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="mix mapping__item"
+            data-project="3"
+            data-link="./newflavorsoftea/1-1-kjh-c/"
+            data-dominantcolor-hex="#ffffff"
+          >
+            <div class="item__wrapper">
+              <div class="item__img__wrapper">
+                <div class="item__link__wrapper">
+                  <a
+                    href="./newflavorsoftea/1-1-kjh-c/"
+                    class="mapping__item__link disabled"
+                    target="_self"
+                    rel="noopener noreferrer"
+                  >
+                    <img
+                      src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-c003_1.jpg?tr=w-200"
+                      srcset=""
+                      data-srcset=""
+                      data-sizes="auto"
+                      class="lazyload item__img"
+                      width="2000"
+                      alt=""
+                    />
+                  </a>
+                </div>
+
+                <div class="item__text hidden">
+                  <span class="item__count">
+                    <span class="item__projectnumber">1-1-kjh-C</span>
+                    &nbsp;
+                    <span class="item__imgnumber">8</span>
+                  </span>
+
+                  <span class="item__projectname hidden"
+                    >김종훈 Kim Jong-Hun</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="mix mapping__item"
+            data-project="3"
+            data-link="./newflavorsoftea/1-1-kjh-c/"
+            data-dominantcolor-hex="#ffffff"
+          >
+            <div class="item__wrapper">
+              <div class="item__img__wrapper">
+                <div class="item__link__wrapper">
+                  <a
+                    href="./newflavorsoftea/1-1-kjh-c/"
+                    class="mapping__item__link disabled"
+                    target="_self"
+                    rel="noopener noreferrer"
+                  >
+                    <img
+                      src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-c004_1.jpg?tr=w-200"
+                      srcset=""
+                      data-srcset=""
+                      data-sizes="auto"
+                      class="lazyload item__img"
+                      width="2000"
+                      alt=""
+                    />
+                  </a>
+                </div>
+
+                <div class="item__text hidden">
+                  <span class="item__count">
+                    <span class="item__projectnumber">1-1-kjh-C</span>
+                    &nbsp;
+                    <span class="item__imgnumber">10</span>
                   </span>
 
                   <span class="item__projectname hidden"
