--- a/newflavorsoftea/1-1-hwk-p/index.html
+++ b/newflavorsoftea/1-1-hwk-p/index.html
@@ -308,11 +308,11 @@
               <div
                 class="projecttoggle__item projecttoggle--information inactive"
               >
-                Description
+                               → Description
               </div>
 
               <div class="projecttoggle__item projecttoggle--overview inactive">
-                Overview
+                → Overview
               </div>
             </div>
           </div>
